--- a/index.html
+++ b/index.html
@@ -5,17 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice | JS neog</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <nav>
-        <ul class="nav-bar">
-            <li class="list-item nav-item">page1</li>
-            <li class="list-item nav-item">page2</li>
-            <li class="list-item nav-item">page3</li>
-        </ul>
+    <nav class="nav-bar">
+        <div class="nav-item">page1</div>
+        <div class="nav-item">page2</div>
+        <div class="nav-item">page3</div>
     </nav>
-    
 </body>
 </html>
