--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
         </div>
         
         <div class="container container-center">
-            <a href=# id="add"><h3>ADD</h3></a>
-            <h3 id="subtract">SUBTRACT</h3>
-            <h3 id="multiply">MULTIPLY</h3>
-            <h3 id="divide">DIVIDE</h3>
+            <button class="but" id="add">ADD</button>
+            <button class="but" id="subtract">SUBTRACT</button>
+            <button class="but" id="multiply">MULTIPLY</button>
+            <button class="but" id="divide">DIVIDE</button>
         </div>
 
         <div class="container container-center">
-            <p>output will apper here</p>
+            <p>Output will apper here</p>
         </div>
 
 
-        <div class="container container-center outputcontainer">
+        <div id="ouputContainer" class="container container-center outputcontainer">
             
         </div>
 
@@ -67,4 +67,7 @@
 
 
 </body>
+
+<script src="app.js" type="text/javascript"></script>
+
 </html>
