--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
         </div>
 
 
-        <div id="ouputContainer" class="container container-center outputcontainer">
+        <div id="ouputContainer" class="container outputcontainer">
             
         </div>
 
 
-
+        <script src="app.js" type="text/javascript"></script>
 
 </body>
 
-<script src="app.js" type="text/javascript"></script>
+
 
 </html>
