--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     nav bar start
     ============= -->
 
-    <nav class="nav-bar">
+    <!-- <nav class="nav-bar">
         <div class="nav-item">page1</div>
         <div class="nav-item">page2</div>
         <div class="nav-item">page3</div>
-    </nav>
+    </nav> -->
 
         <!-- =============
     nav bar over
@@ -59,7 +59,7 @@
         </div>
 
 
-        <div id="ouputContainer" class="container outputcontainer">
+        <div id="outputContainer" class="container outputcontainer">
             
         </div>
 
