--- a/fetch practice/index.html
+++ b/fetch practice/index.html
@@ -9,6 +9,8 @@
 <body>
     <button id="get-text">Get text</button>
     <button id="get-json">Get Json</button>
+    <button id="get-API">Get API data</button>
+
     <div id="output"></div>
 
 
